spacing issue fixed

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,5 +1,5 @@
 .nhrrob-popular-plugins {
-    width: 60%;
+    width: 80%;
     margin: auto;
 }
 .nhrrob-popular-plugins .align-center {
